--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/syles.css" />
+    <link rel="stylesheet" href="./assets/styles.css" />
     <title>Code Quiz</title>
   </head>
   <header>
@@ -32,6 +32,6 @@
       <input type="text" id="initials" name="initials" required />
       <button type="button" id="js-submit-button">Submit</button>
     </section>
-    <script src="./assets/Js/script.js"></script>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
